--- a/init.tex
+++ b/init.tex
@@ -35,10 +35,12 @@
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage[most]{tcolorbox}
+\tcbuselibrary{many} % Can keep this, it loads common libraries
+\tcbuselibrary{skins, breakable, float} % Explicitly load float library
+\usepackage{subcaption}
 \usepackage{soul} % For \hl
 \usepackage{fancyhdr}
 \usepackage{tikz}
-\usepackage{booktabs}
 \usepackage{mdframed}
 \usepackage{enumitem}
 \usepackage[colorlinks=true,allcolors=blue]{hyperref}
@@ -148,13 +150,17 @@ It is for educational purposes only.
 \section{Introduction}
 \noindent If your computer (which is relatively new) has been acting strange lately: slowing down for no good reason, heating up unexpectedly, or draining the battery unusually fast, you might dismiss it as age or bloatware. But what if it's something more sinister? Something quietly turning your system into a soldier for a hidden cyber army?
 \noindent Botnets are widely exploited by organized hacking groups for launching \textbf{\textit{massive, coordinated attacks}} but this guide is geared towards defending against them.\\
-The main body of this guide contains actionable steps, while detailed background information for graduate students and professionals is provided in the Appendices. The Glossary serves as an exhaustive list of technical terms that are not apparent. This document serves as a comprehensive, step-by-step \underline{instruction guide} designed to help readers \textbf{detect, remove, and counteract} botnet infections. 
+While the steps presented are advanced in nature, motivated beginners or intermediate users with access to their machine's terminal and administrative privileges will be able to follow along. Detailed background information for graduate students and professionals is provided in the Appendices including a sample attack orchestration. The Glossary serves as an exhaustive list of technical terms that are not apparent. This document serves as a comprehensive, step-by-step \underline{instruction guide} designed to help readers \textbf{detect, remove, and counteract} botnet infections. 
 
-\subsection{What you will need:}
-\begin{enumerate}
+ \subsection*{Prerequisites:}
+\begin{itemize}
     \item An infected \textbf{Linux} \textit{(Recommended)}, Windows, or MacOS computer \textbf{\textit{(not mobile phone)}}.
-    \item Superuser or root access to the above machine. A superuser is a user who has permissions to read and write all files and code in their machine.
-\end{enumerate}
+    \item You should be comfortable entering commands in a terminal or command prompt.
+    \item You must have administrative access to the suspected machine (Linux/Windows/macOS).
+    \item Estimated time to complete the detection and removal steps: \textbf{120 minutes}.
+    \item Estimated Reading Time: 1 hour.
+\end{itemize}
+
 \section{What is a Botnet?}
 \noindent A botnet is a network of compromised devices controlled by a centralized \textbf{Command and Control (C2)} server. These devices—often unsuspecting—are commandeered to execute distributed attacks, data theft, and other malicious activities. The figure below offers an \textit{\textcolor{blue}{overview}} of a typical botnet structure.
 \begin{tcolorbox}[
@@ -219,9 +225,12 @@ The \textbf{\textit{\hl{BEST}}} way to prevent infection in the first place is t
 The terminal is the command line interface of your computer where you can type a command and the computer will execute it for you:
 \begin{itemize}
     \item Linux: \texttt{Ctrl + Alt + T}
-    \item MacOS: Open spotlight \texttt{(Command+Space)} and search for \texttt{``terminal"}.
+    \item MacOS: Open spotlight \texttt{(Command+Space)} and search for \texttt{"terminal"} in the example.
     \item Windows: Press the windows key and type \texttt{cmd} then click on \texttt{Command prompt}
 \end{itemize}
+\begin{center}
+    \includegraphics[width=0.5\linewidth]{term.png}
+\end{center}
 \end{instructionstep}
 \begin{instructionstep}
 \textbf{Determine if You Are Infected:}\\[2mm]
@@ -252,14 +261,17 @@ Booting into \hl{Safe Mode} or \hl{Recovery Mode} loads only essential system se
     \texttt{Troubleshoot $\rightarrow$ Advanced Options $\rightarrow$ Startup Settings $\rightarrow$ Restart}\\
     Press \texttt{4} (or \texttt{F4}) for Safe Mode, or \texttt{5/F5} for Safe Mode with Networking.
     \end{quote}
-    \item \textbf{Linux (Ubuntu):} Reboot and hold \texttt{Shift} to access the GRUB menu, then select:
+    \item \textbf{Linux (Ubuntu):} Reboot and hold \texttt{Shift} to access the GRUB menu (\href{https://askubuntu.com/questions/992877/understanding-the-options-in-the-grub-menu}{in example}), then select:
     \begin{quote}
     \texttt{Advanced options for Ubuntu $\rightarrow$ (recovery mode)}\\
     Choose \texttt{Root} for shell access.
     \end{quote}
-    \item \textbf{MacOS:} Users are not allowed to access the code, so you will have to pay a servicing fee and not use your machine for at least a week.
+    \item \textbf{MacOS:} Enter Safe Mode by restarting and holding the \texttt{Shift} key until the login screen appears. Note that advanced malware removal options are limited due to macOS security restrictions. If standard tools are ineffective, consider consulting Apple-certified technicians.
 \end{itemize}
 \textit{\textbf{Logic:}} Running the system in a minimal environment prevents most malware from launching, thereby facilitating the identification and removal of malicious components.
+\begin{center}
+    \includegraphics[width=0.5\linewidth]{GRUB.png}
+\end{center}
 \end{instructionstep}
 
 \begin{instructionstep}
@@ -288,6 +300,24 @@ sudo rkhunter --check
 \end{itemize}
 \textit{\textbf{Logic:}} A comprehensive malware scan is critical to identify and remove malicious files or rootkits that may be covertly operating on your system.$^{\text{\href{https://pmc.ncbi.nlm.nih.gov/articles/PMC7014485/\#sec3-sensors-20-00556}{[2]}}}$
 \end{instructionstep}
+
+\begin{figure}[htbp]
+    \centering % Center the figure content
+
+    \begin{subfigure}[b]{0.48\textwidth} % Width of the subfigure
+        \includegraphics[width=\linewidth]{kaliclam.png} % Image 'a.png'
+        \caption{Kali Linux Clam scan (zoom to read)} % Sub-caption for 'a.png'
+        \label{fig:sub_a} % Label for subfigure 'a.png'
+    \end{subfigure}
+    \hfill % Horizontal space
+    \begin{subfigure}[b]{0.48\textwidth} % Width of the subfigure
+        \includegraphics[width=\linewidth]{kalirootkit.png} % Image 'b.png'
+        \caption{Kali Linux rootkit scan (zoom to read)} % Sub-caption for 'b.png'
+        \label{fig:sub_b} % Label for subfigure 'b.png'
+    \end{subfigure}
+    \label{fig:ab_images_subcaption} % Overall label
+\end{figure}
+
 
 \begin{instructionstep}
 \textbf{Check for Persistence Mechanisms:}\\[2mm]
@@ -326,8 +356,49 @@ Once your system is verified as clean, update the passwords for all your sensiti
 \textit{\textbf{Logic:}} Infections may compromise your credentials, enabling unauthorized access. Updating passwords prevents further misuse of any stolen information.
 \end{instructionstep}
 
-\noindent \textbf{Conclusion}\\[2mm]
-The procedures outlined in this guide provide a systematic, scientifically grounded methodology for detecting, isolating, and eliminating botnet infections. By adhering to these rigorously detailed steps—from the initial detection of anomalies and network isolation to comprehensive malware scanning and the removal of persistence mechanisms—system administrators and end users can restore and maintain system integrity. Furthermore, the advanced countermeasure strategies detailed in the Appendices underscore the importance of proactive cybersecurity practices. It is imperative to continuously update software, exercise caution with downloads, and regularly scan systems to preclude future threats.
+\begin{instructionstep}
+    \section*{Final Checklist: Is Your System Clean?}
+\addcontentsline{toc}{section}{Final Checklist}
+\begin{itemize}
+    \item [\checkmark] All malicious files/quarantine results reviewed?
+    \item [\checkmark] Persistence entries (startup, cronjobs, registry) checked?
+    \item [\checkmark] Network traffic appears normal using tools like Wireshark?
+    \item [\checkmark] System performance is restored and stable?
+    \item [\checkmark] All passwords changed on a clean machine?
+\end{itemize}
+
+\vspace{5mm}
+\section*{Common Problems and Solutions (FAQ)}
+\addcontentsline{toc}{section}{FAQ}
+\begin{itemize}
+    \item \textbf{Q: The malware scanner didn't find anything, but my device is still slow.}\\
+    A: Try booting into Safe Mode and repeating the scan. If symptoms persist, investigate startup processes or consult a professional.
+    
+    \item \textbf{Q: I’m using Linux, but I’m unfamiliar with the commands listed.}\\
+    A: Refer to the official man pages or tutorials for \texttt{clamAV}, \texttt{chkrootkit}, or \texttt{systemctl}. 
+
+    \item \textbf{Q: My Mac says “permission denied” when I try certain scans.}\\
+    A: macOS restricts low-level access. Try using Malwarebytes for macOS or reach out to Apple support for advanced remediation.
+\end{itemize}
+\end{instructionstep}
+
+\section*{Conclusion}
+\addcontentsline{toc}{section}{Conclusion}
+\noindent 
+If you succeeded in checking off everything in the final checklist, \textbf{\textit{\hl{congratulations}}} you have a clean machine. This instruction set has guided you through a scientifically informed and methodically sound approach to diagnosing and removing botnet infections. By isolating the system, conducting layered scans, investigating persistence mechanisms, and, if needed, reinstalling the OS, you can restore system integrity.
+
+\noindent
+However, cybersecurity is not a one-time task. Moving forward:
+\begin{itemize}
+    \item Keep your systems patched and up-to-date.
+    \item Use strong, unique passwords and a reliable password manager.
+    \item Enable multi-factor authentication whenever possible.
+    \item Consider setting up a firewall or intrusion detection system.
+\end{itemize}
+
+\noindent 
+Stay vigilant, and remember: proactive defense is the best mitigation.
+
 
 % ============================================================================
 % Section 4: Glossary of Key Terms
@@ -477,151 +548,7 @@ This methodology is elaborated in Yamaguchi et al.$^{\text{\href{https://pmc.ncb
 \end{itemize}
 For further details, consult Yamaguchi et al.$^{\text{\href{https://pmc.ncbi.nlm.nih.gov/articles/PMC7014485/\#sec3-sensors-20-00556}{[2]}}}$ and the framework by Yegneswaran, Porras, and Bluementhal$^{\text{\href{https://www.usenix.org/conference/usenix-security-04/framework-understanding-botnet-based-attacks}{[6]}}}$.
 
-
-
-% \section*{Appendix C: Attack Orchestration and Comparative Analysis}
-% \addcontentsline{toc}{section}{Appendix C: Attack Orchestration and Comparative Analysis}
-% \noindent
-% \subsection*{Overview of the Attack Scenario}
-% \noindent
-% In this experiment, a simulated botnet attack was launched from a Kali Linux Docker VM against a honeypot listener operating on an Ubuntu system. The attacker used a combination of custom TCP payloads and high-frequency flooding techniques (e.g., via \texttt{hping3 --flood}) to overload the honeypot service listening on TCP port 4444.
-% \noindent
-
-% The screenshots and logs (Figures \ref{fig:listener}, \ref{fig:tcpdump-lsof}) capture:
-% \begin{itemize}
-%     \item Successful connections and payload deliveries from the attacking VM.
-%     \item TCP dump of incoming SYN packets and active socket states.
-%     \item The listener transitioning through \texttt{ESTABLISHED} to \texttt{CLOSE\_WAIT} states.
-%     \item High-volume packet bursts and their impact on system response.
-% \end{itemize}
-
-% \subsection*{Table 1: Custom Botnet Attack vs Professional Botnet}
-% \begin{table}[h!]
-% \centering
-% \renewcommand{\arraystretch}{1.4}
-% \begin{tabular}{|p{4.2cm}|p{5.5cm}|p{5.5cm}|}
-% \hline
-% \rowcolor{blue!15}
-% \textbf{Feature} & \textbf{My Custom Attack} & \textbf{Professional Botnet} \\
-% \hline
-% \textbf{Payload Delivery} & Fixed, hardcoded payloads (e.g., \texttt{rm -rf}, \texttt{heartbeat=alive}) via raw TCP & Encrypted, polymorphic payloads that adapt per target \\
-% \hline
-% \textbf{C2 Communication} & Centralized, static IP/port (192.168.110.213:4444) & Dynamic C2: peer-to-peer, domain generation algorithms (DGA), or social media steganography \\
-% \hline
-% \textbf{Flooding Tool} & High-volume SYN packets via \texttt{hping3 --flood} & Throttled, stealthy traffic mimicking user behavior (HTTP/TLS/QUIC) \\
-% \hline
-% \textbf{Persistence} & None; no post-infection survival & Crontab, systemd, registry edits, and rootkits for long-term presence \\
-% \hline
-% \textbf{Kernel Detection} & Flooding causes kernel to \texttt{kill -9} due to resource exhaustion & Memory-resident malware, process hollowing, sandbox detection to avoid kernel scrutiny \\
-% \hline
-% \textbf{Listener Behavior} & Custom socket-based listener with fixed thread pool & Dynamic service injection and stealthy socket hijacking \\
-% \hline
-% \textbf{Packet Obfuscation} & Clear-text TCP payloads & TLS encryption, DNS tunneling, or covert channel techniques \\
-% \hline
-% \textbf{Entry Vector} & Manual deployment, requires listener on target & Exploits open services like SSH, RDP, or web servers; no manual setup needed \\
-% \hline
-% \textbf{Outbound Beaconing} & Bots push traffic to static listener over LAN & Encrypted outbound beaconing (e.g., HTTPS, DNS, Telegram API) \\
-% \hline
-% \textbf{Reverse Shell} & Not implemented; relies on raw sockets & Reverse shells with privilege escalation and polymorphic callbacks \\
-% \hline
-% \textbf{Traffic Visibility} & Easy to inspect; raw TCP data is clear-text & Encrypted and obfuscated to mimic normal web or app traffic \\
-% \hline
-% \textbf{Persistence Mechanism} & None; scripts run until killed & Full system persistence through service registration, hidden jobs, or rootkits \\
-% \hline
-% \textbf{Stealth} & Loud, obvious; visible in netstat and top & Designed to evade AV, IDS/IPS, and sandbox environments \\
-% \hline
-% \textbf{Environment Awareness} & Runs in any Docker/VM blindly & Detects virtualization, disables itself in analysis environments \\
-% \hline
-% \end{tabular}
-% \caption{Differences Between Custom Botnet Attack and Professional Botnets}
-% \label{tab:comparison}
-% \end{table}
-
-
-% \subsection*{Table 2: Evasion Techniques Used by Advanced Botnets}
-% \begin{table}[h!]
-% \centering
-% \renewcommand{\arraystretch}{1.4}
-% \begin{tabular}{|p{5cm}|p{9.5cm}|}
-% \hline
-% \rowcolor{blue!15}
-% \textbf{Technique} & \textbf{Description and Purpose} \\
-% \hline
-% \textbf{Process Hollowing} & Injects malicious code into legitimate processes to evade detection by AV or kernel monitors \\
-% \hline
-% \textbf{Fileless Execution} & Uses PowerShell, WMI, or /dev/shm on Linux to execute without ever writing to disk \\
-% \hline
-% \textbf{Sandbox Detection} & Detects virtual environments using CPU ID, MAC address, or timing attacks; exits silently if found \\
-% \hline
-% \textbf{Dynamic Sleep Delays} & Waits for minutes/hours before executing payload to bypass heuristics and sandbox triggers \\
-% \hline
-% \textbf{Traffic Shaping} & Mimics user browsing behavior and uses TLS/QUIC protocols to hide C2 traffic \\
-% \hline
-% \textbf{Rootkits and Kernel Modules} & Loadable modules on Linux (or drivers on Windows) that hide files, processes, and sockets \\
-% \hline
-% \textbf{Self-Mutating Code} & Changes its own binary signature at runtime to evade signature-based detection \\
-% \hline
-% \end{tabular}
-% \caption{Evasion Tactics Used by Advanced Botnets}
-% \label{tab:evasion}
-% \end{table}
-
-% \subsection*{Illustrations}
-
-% \newpage
-% \subsection*{TikZ Diagram: My Custom Attack}
-% \begin{figure}[h!]
-% \centering
-% \begin{tikzpicture}[node distance=2.5cm, every node/.style={font=\small},
-%     device/.style={rectangle, draw=black, fill=blue!15, minimum width=2.5cm, minimum height=1cm},
-%     cloud/.style={ellipse, draw=black, fill=gray!20, minimum width=2cm}]
-
-%     \node[device] (attacker) {Kali linux attacker (Bot1)};
-%     \node[device, below=of attacker] (attacker2) {MacOS attacker (Bot2)};
-%     \node[cloud, right=of attacker] (internet) {LAN/Bridge};
-%     \node[device, right=of internet] (honeypot) {Ubuntu Honeypot (port 4444)};
-
-%     \draw[->, thick] (attacker) -- node[above]{SYN Flood} (internet);
-%     \draw[->, thick] (attacker) -- node[below]{TCP Payloads} (internet);
-%     \draw[->, thick] (attacker2) -- node[left]{C2 beacon} (internet);
-%     \draw[->, thick] (attacker2) -- node[right]{Telnet Attempts} (internet);
-%     \draw[->, thick] (internet) -- node[above]{transmits} (honeypot);
-% \end{tikzpicture}
-% \caption{Basic Custom Botnet Flooding to Static Target}
-% \label{fig:custom-attack-tikz}
-% \end{figure}
-
-% \subsection*{TikZ Diagram: Professional Botnet}
-% \begin{figure}[h!]
-% \centering
-% \begin{tikzpicture}[node distance=2.5cm, every node/.style={font=\small},
-%     peer/.style={rectangle, draw=black, fill=blue!10, minimum width=2cm, minimum height=0.8cm},
-%     server/.style={rectangle, draw=black, fill=orange!20, minimum width=2.7cm, minimum height=1cm},
-%     cloud/.style={ellipse, draw=black, fill=gray!20, minimum width=2.4cm}]
-
-%     \node[peer] (bot1) {Bot 1};
-%     \node[peer, right=of bot1] (bot2) {Bot 2};
-%     \node[peer, right=of bot2] (bot3) {Bot 100000};
-
-%     \node[cloud, below=of bot2] (internet) {Internet};
-%     \node[server, below=of internet] (c2) {C2 Server / Telegram API};
-%     \node[server, right=of c2] (target) {Victim (Honeypot)};
-
-%     \draw[<->, thick, dashed] (bot1) -- (bot2);
-%     \draw[<->, thick, dashed] (bot2) -- node[above]{$\ldots$ upto} (bot3);
-%     \draw[->, thick] (bot1) -- (internet);
-%     \draw[->, thick] (bot2) -- (internet);
-%     \draw[->, thick] (bot3) -- (internet);
-
-%     \draw[->, thick] (internet) -- node[right]{TLS/QUIC/Stego Payload} (c2);
-%     \draw[->, thick] (c2) -- node[above]{Polymorphic Code} (target);
-%     \draw[->, thick] (c2) -- node[below]{Beaconing} (target);
-% \end{tikzpicture}
-% \caption{Peer-to-Peer Botnet with Encrypted C2 Infrastructure}
-% \label{fig:pro-botnet-tikz}
-% \end{figure}
-
-\newpage \section*{Appendix C: Attack Orchestration and Comparative Analysis}
+\section*{Appendix C: Attack Orchestration and Comparative Analysis}
 \addcontentsline{toc}{section}{Appendix C: Attack Orchestration and Comparative Analysis}
 
 % ----------------------------------------------------------------------
@@ -671,7 +598,6 @@ services1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         TX packets 868  bytes 73107 (71.3 KiB)
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 \end{lstlisting}
-\newpage 
 \subsubsection*{Network Topology}
 The network topology used for the attack is illustrated in Figure 2 which specifies the attacker and the honeypot (victim) IP addresses:
 \begin{figure}[h!]
@@ -727,6 +653,12 @@ except KeyboardInterrupt:
     s.close()
 \end{lstlisting}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.7\linewidth]{running_listener.png}
+    \caption{Victim listening on a port maybe for legit programs}
+\end{figure}
+\clearpage
 \subsubsection*{2. Attack Execution Script}
 The attack was orchestrated using a comprehensive Python script that simulates multiple attack vectors (TCP/UDP connections, SYN floods via Scapy, HTTP requests via \texttt{curl}, telnet attempts, and custom payload delivery). The script also simulates C2-style beaconing. See Listing~\ref{lst:attack} for the complete implementation.
 \begin{lstlisting}[language=python, caption={Attack Execution Code (\texttt{attack.py})}, label={lst:attack}]
@@ -846,8 +778,18 @@ if __name__ == "__main__":
     main()
 
 \end{lstlisting}
-\clearpage
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\linewidth]{attack_execution.png}
+    \caption{Executing the double attack for Ddos}
+\end{figure}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\linewidth]{lsofandtcpdump.png}
+    \caption{When victim runs network inspection commands \texttt{lsof} on the right and \texttt{tcpdump} on the left}
+\end{figure}
+\clearpage
 % ----------------------------------------------------------------------
 % Comparative Analysis Tables
 % ----------------------------------------------------------------------
@@ -1010,4 +952,11 @@ Appendix C not only illustrates the technical implementation but also provides a
 \clearpage
 \nocite{*}
 \printbibliography[heading=bibintoc,title={References}]
+\centering
+\textbf{—-------------x--x-End Of Document-x--x—-------------}\\
+\tiny Courtesy shutterstock
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\linewidth]{end.jpg}
+\end{figure}
 \end{document}
