Fix mathematical expressions in Help_Aditya.tex

--- a/Help_Aditya.tex
+++ b/Help_Aditya.tex
@@ -246,7 +246,7 @@ No real \(x\) satisfies the equation.
 \[
 \sum_{k=1}^{3}\frac{\sin\!\left(\frac{k\pi}{12}\right)+\sin\!\left(\frac{(6-k)\pi}{12}\right)}
 {\cos\!\left(\frac{k\pi}{12}\right)+\cos\!\left(\frac{(6-k)\pi}{12}\right)}
--2\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
+-\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
 {1+\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}.
 \]
 
@@ -258,15 +258,15 @@ where \[
 A = \left(\frac{\pi}{4}+\frac{m\pi}{12}\right), \hspace{20pt}
 B=\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)
 \]
-Thus the product \(-2\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
+Thus the product \(-\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
 {1+\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}\). becomes
 \[
 \prod_{m=1}^2 \tan\left(\frac{m\pi}{6}\right)
 = \tan\left(\frac{\pi}{6}\right)\tan\left(\frac{\pi}{3}\right)
 = \frac{1}{\sqrt{3}}\cdot \sqrt{3}=1.
 \]
-So the second term is \(\boxed{-2\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
-{1+\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)} =(-2)}\).\\
+So the second term is \(\boxed{-\prod_{m=1}^{2}\frac{\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)-\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)}
+{1+\tan\!\left(\frac{\pi}{4}+\frac{m\pi}{12}\right)\tan\!\left(\frac{\pi}{4}-\frac{m\pi}{12}\right)} =(-1)}\).\\
 \hline
 \vspace{15pt}
 \noindent Next simplifying:\\
@@ -286,7 +286,7 @@ Thus each summand becomes
 Summing \(\sum_{k=1}^{3} \frac{\sin\left(\frac{k\pi}{12}\right) + \sin\left(\frac{(6-k)\pi}{12}\right)}{\cos\left(\frac{k\pi}{12}\right) + \cos\left(\frac{(6-k)\pi}{12}\right)}\) gives \(3 \hspace{10pt} (\because \sum = 1\times3)\).  \\
 Therefore:
 \[
-\boxed{3 - 2 = 1.}
+\boxed{3 - 1 = 2.}
 \]
 \end{tcolorbox}
 
